2005-07-18  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.9.1

2005-07-11  John Levon  <levon@movementarian.org>

	* module/oprofile.c: fix for GCC 3.4, spotted by
	  Jason Lunz <lunz@falooley.org>

2005-01-06  Ralf Baechle  <ralf@linux-mips.org>

	* events/Makefile.am:
	* events/mips/24K/events:
	* events/mips/24K/unit_masks:
	* libop/op_events.c:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c:
	* utils/ophelp.c: Add MIPS 24K support

2005-06-16  Richard Purdie  <rpurdie@o-hand.com>

	* utils/opcontrol: fix ARM kernels again after 2005-05-04
	  change to op_bfd.cpp broke it again. Only look for .text
	  section for our kernel range.

2005-06-13  Richard Purdie  <rpurdie@o-hand.com>

	* libpp/callgraph_container.cpp:
	* libpp/profile.cpp: ignore any symbols before .text
	  for start_offset profiles

2005-06-02  Jason Lunz  <lunz@falooley.org>

	* libpp/diff_container.cpp:
	* libpp/format_output.cpp:
	* libutil++/bfd_support.cpp:
	* libutil++/op_bfd.cpp: fix compilation on GCC 2.95.x,
	  older glibc

2005-06-01  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate_options.cpp: error out if --assembly and --output-dir
	  are used together
	* doc/opannotate.1.in:
	* doc/oprofile.xml: update docucmentation according.

2005-05-31  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.9.1cvs

2005-05-27  John Levon  <levon@movementarian.org>

	* libpp/diff_container.cpp: convert the diffs into
	  an actual percentage!

	* configure.in: bump to 0.9

2005-05-26  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.c:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.c: fixes for image filtering

2005-05-09  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_sfile.c: Fix variable declaration to compile on gcc 3.4.
	
2005-05-04  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/common_option.cpp: split argument "{}" in two separate argument

2005-05-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: fix typos
